vcis-vpc-cdk/output/vcis-vpc-stack-non-prod.template.yaml
Resources:
  vcisvpc90CC8047:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 172.18.0.0/19
      EnableDnsHostnames: true
      EnableDnsSupport: true
      InstanceTenancy: default
      Tags:
        - Key: mon:owner
          Value: GAMITCH
        - Key: mon:cost-center
          Value: 5180-9130-SLR74781
        - Key: mon:project
          Value: VC-Industry-System
        - Key: mon:env
          Value: non-prod
        - Key: mon:regulated
          Value: sox
        - Key: mon:data-classification
          Value: internal
        - Key: Name
          Value: vcis-vpc-stack-non-prod/vcis-vpc
    Metadata:
      aws:cdk:path: vcis-vpc-stack-non-prod/vcis-vpc/Resource
  vcisvpcpublicSubnet1SubnetFB77997E:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 172.18.0.0/24
      VpcId:
        Ref: vcisvpc90CC8047
      AvailabilityZone: us-east-1a
      MapPublicIpOnLaunch: true
      Tags:
        - Key: mon:owner
          Value: GAMITCH
        - Key: mon:cost-center
          Value: 5180-9130-SLR74781
        - Key: mon:project
          Value: VC-Industry-System
        - Key: mon:env
          Value: non-prod
        - Key: mon:regulated
          Value: sox
        - Key: mon:data-classification
          Value: internal
        - Key: Name
          Value: vcis-vpc-stack-non-prod/vcis-vpc/publicSubnet1
        - Key: aws-cdk:subnet-name
          Value: public
        - Key: aws-cdk:subnet-type
          Value: Public
    Metadata:
      aws:cdk:path: vcis-vpc-stack-non-prod/vcis-vpc/publicSubnet1/Subnet
  vcisvpcpublicSubnet1RouteTableD9EB1FC4:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: vcisvpc90CC8047
      Tags:
        - Key: mon:owner
          Value: GAMITCH
        - Key: mon:cost-center
          Value: 5180-9130-SLR74781
        - Key: mon:project
          Value: VC-Industry-System
        - Key: mon:env
          Value: non-prod
        - Key: mon:regulated
          Value: sox
        - Key: mon:data-classification
          Value: internal
        - Key: Name
          Value: vcis-vpc-stack-non-prod/vcis-vpc/publicSubnet1
    Metadata:
      aws:cdk:path: vcis-vpc-stack-non-prod/vcis-vpc/publicSubnet1/RouteTable
  vcisvpcpublicSubnet1RouteTableAssociation772DDA9B:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: vcisvpcpublicSubnet1RouteTableD9EB1FC4
      SubnetId:
        Ref: vcisvpcpublicSubnet1SubnetFB77997E
    Metadata:
      aws:cdk:path: vcis-vpc-stack-non-prod/vcis-vpc/publicSubnet1/RouteTableAssociation
  vcisvpcpublicSubnet1DefaultRoute5A9C0498:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: vcisvpcpublicSubnet1RouteTableD9EB1FC4
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: vcisvpcIGW50F7FA09
    DependsOn:
      - vcisvpcVPCGWDF92BB0D
    Metadata:
      aws:cdk:path: vcis-vpc-stack-non-prod/vcis-vpc/publicSubnet1/DefaultRoute
  vcisvpcpublicSubnet1EIPB0E09B0A:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
    Metadata:
      aws:cdk:path: vcis-vpc-stack-non-prod/vcis-vpc/publicSubnet1/EIP
  vcisvpcpublicSubnet1NATGateway8A36278B:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId:
        Fn::GetAtt:
          - vcisvpcpublicSubnet1EIPB0E09B0A
          - AllocationId
      SubnetId:
        Ref: vcisvpcpublicSubnet1SubnetFB77997E
      Tags:
        - Key: mon:owner
          Value: GAMITCH
        - Key: mon:cost-center
          Value: 5180-9130-SLR74781
        - Key: mon:project
          Value: VC-Industry-System
        - Key: mon:env
          Value: non-prod
        - Key: mon:regulated
          Value: sox
        - Key: mon:data-classification
          Value: internal
        - Key: Name
          Value: vcis-vpc-stack-non-prod/vcis-vpc/publicSubnet1
    Metadata:
      aws:cdk:path: vcis-vpc-stack-non-prod/vcis-vpc/publicSubnet1/NATGateway
  vcisvpcpublicSubnet2SubnetC5A6D371:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 172.18.1.0/24
      VpcId:
        Ref: vcisvpc90CC8047
      AvailabilityZone: us-east-1b
      MapPublicIpOnLaunch: true
      Tags:
        - Key: mon:owner
          Value: GAMITCH
        - Key: mon:cost-center
          Value: 5180-9130-SLR74781
        - Key: mon:project
          Value: VC-Industry-System
        - Key: mon:env
          Value: non-prod
        - Key: mon:regulated
          Value: sox
        - Key: mon:data-classification
          Value: internal
        - Key: Name
          Value: vcis-vpc-stack-non-prod/vcis-vpc/publicSubnet2
        - Key: aws-cdk:subnet-name
          Value: public
        - Key: aws-cdk:subnet-type
          Value: Public
    Metadata:
      aws:cdk:path: vcis-vpc-stack-non-prod/vcis-vpc/publicSubnet2/Subnet
  vcisvpcpublicSubnet2RouteTable5F053536:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: vcisvpc90CC8047
      Tags:
        - Key: mon:owner
          Value: GAMITCH
        - Key: mon:cost-center
          Value: 5180-9130-SLR74781
        - Key: mon:project
          Value: VC-Industry-System
        - Key: mon:env
          Value: non-prod
        - Key: mon:regulated
          Value: sox
        - Key: mon:data-classification
          Value: internal
        - Key: Name
          Value: vcis-vpc-stack-non-prod/vcis-vpc/publicSubnet2
    Metadata:
      aws:cdk:path: vcis-vpc-stack-non-prod/vcis-vpc/publicSubnet2/RouteTable
  vcisvpcpublicSubnet2RouteTableAssociation7C1A7264:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: vcisvpcpublicSubnet2RouteTable5F053536
      SubnetId:
        Ref: vcisvpcpublicSubnet2SubnetC5A6D371
    Metadata:
      aws:cdk:path: vcis-vpc-stack-non-prod/vcis-vpc/publicSubnet2/RouteTableAssociation
  vcisvpcpublicSubnet2DefaultRoute824E3AAC:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: vcisvpcpublicSubnet2RouteTable5F053536
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: vcisvpcIGW50F7FA09
    DependsOn:
      - vcisvpcVPCGWDF92BB0D
    Metadata:
      aws:cdk:path: vcis-vpc-stack-non-prod/vcis-vpc/publicSubnet2/DefaultRoute
  vcisvpcpublicSubnet2EIP340EB075:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
    Metadata:
      aws:cdk:path: vcis-vpc-stack-non-prod/vcis-vpc/publicSubnet2/EIP
  vcisvpcpublicSubnet2NATGateway5929095E:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId:
        Fn::GetAtt:
          - vcisvpcpublicSubnet2EIP340EB075
          - AllocationId
      SubnetId:
        Ref: vcisvpcpublicSubnet2SubnetC5A6D371
      Tags:
        - Key: mon:owner
          Value: GAMITCH
        - Key: mon:cost-center
          Value: 5180-9130-SLR74781
        - Key: mon:project
          Value: VC-Industry-System
        - Key: mon:env
          Value: non-prod
        - Key: mon:regulated
          Value: sox
        - Key: mon:data-classification
          Value: internal
        - Key: Name
          Value: vcis-vpc-stack-non-prod/vcis-vpc/publicSubnet2
    Metadata:
      aws:cdk:path: vcis-vpc-stack-non-prod/vcis-vpc/publicSubnet2/NATGateway
  vcisvpcrdsSubnet1Subnet2B219688:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 172.18.2.0/24
      VpcId:
        Ref: vcisvpc90CC8047
      AvailabilityZone: us-east-1a
      MapPublicIpOnLaunch: false
      Tags:
        - Key: mon:owner
          Value: GAMITCH
        - Key: mon:cost-center
          Value: 5180-9130-SLR74781
        - Key: mon:project
          Value: VC-Industry-System
        - Key: mon:env
          Value: non-prod
        - Key: mon:regulated
          Value: sox
        - Key: mon:data-classification
          Value: internal
        - Key: Name
          Value: vcis-vpc-stack-non-prod/vcis-vpc/rdsSubnet1
        - Key: aws-cdk:subnet-name
          Value: rds
        - Key: aws-cdk:subnet-type
          Value: Isolated
    Metadata:
      aws:cdk:path: vcis-vpc-stack-non-prod/vcis-vpc/rdsSubnet1/Subnet
  vcisvpcrdsSubnet1RouteTable120FEB78:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: vcisvpc90CC8047
      Tags:
        - Key: mon:owner
          Value: GAMITCH
        - Key: mon:cost-center
          Value: 5180-9130-SLR74781
        - Key: mon:project
          Value: VC-Industry-System
        - Key: mon:env
          Value: non-prod
        - Key: mon:regulated
          Value: sox
        - Key: mon:data-classification
          Value: internal
        - Key: Name
          Value: vcis-vpc-stack-non-prod/vcis-vpc/rdsSubnet1
    Metadata:
      aws:cdk:path: vcis-vpc-stack-non-prod/vcis-vpc/rdsSubnet1/RouteTable
  vcisvpcrdsSubnet1RouteTableAssociation4579EF79:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: vcisvpcrdsSubnet1RouteTable120FEB78
      SubnetId:
        Ref: vcisvpcrdsSubnet1Subnet2B219688
    Metadata:
      aws:cdk:path: vcis-vpc-stack-non-prod/vcis-vpc/rdsSubnet1/RouteTableAssociation
  vcisvpcrdsSubnet2SubnetCE79FD36:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 172.18.3.0/24
      VpcId:
        Ref: vcisvpc90CC8047
      AvailabilityZone: us-east-1b
      MapPublicIpOnLaunch: false
      Tags:
        - Key: mon:owner
          Value: GAMITCH
        - Key: mon:cost-center
          Value: 5180-9130-SLR74781
        - Key: mon:project
          Value: VC-Industry-System
        - Key: mon:env
          Value: non-prod
        - Key: mon:regulated
          Value: sox
        - Key: mon:data-classification
          Value: internal
        - Key: Name
          Value: vcis-vpc-stack-non-prod/vcis-vpc/rdsSubnet2
        - Key: aws-cdk:subnet-name
          Value: rds
        - Key: aws-cdk:subnet-type
          Value: Isolated
    Metadata:
      aws:cdk:path: vcis-vpc-stack-non-prod/vcis-vpc/rdsSubnet2/Subnet
  vcisvpcrdsSubnet2RouteTable49B3A818:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: vcisvpc90CC8047
      Tags:
        - Key: mon:owner
          Value: GAMITCH
        - Key: mon:cost-center
          Value: 5180-9130-SLR74781
        - Key: mon:project
          Value: VC-Industry-System
        - Key: mon:env
          Value: non-prod
        - Key: mon:regulated
          Value: sox
        - Key: mon:data-classification
          Value: internal
        - Key: Name
          Value: vcis-vpc-stack-non-prod/vcis-vpc/rdsSubnet2
    Metadata:
      aws:cdk:path: vcis-vpc-stack-non-prod/vcis-vpc/rdsSubnet2/RouteTable
  vcisvpcrdsSubnet2RouteTableAssociation4544259B:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: vcisvpcrdsSubnet2RouteTable49B3A818
      SubnetId:
        Ref: vcisvpcrdsSubnet2SubnetCE79FD36
    Metadata:
      aws:cdk:path: vcis-vpc-stack-non-prod/vcis-vpc/rdsSubnet2/RouteTableAssociation
  vcisvpcprivateSubnet1SubnetB84BEA33:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 172.18.4.0/22
      VpcId:
        Ref: vcisvpc90CC8047
      AvailabilityZone: us-east-1a
      MapPublicIpOnLaunch: false
      Tags:
        - Key: mon:owner
          Value: GAMITCH
        - Key: mon:cost-center
          Value: 5180-9130-SLR74781
        - Key: mon:project
          Value: VC-Industry-System
        - Key: mon:env
          Value: non-prod
        - Key: mon:regulated
          Value: sox
        - Key: mon:data-classification
          Value: internal
        - Key: Name
          Value: vcis-vpc-stack-non-prod/vcis-vpc/privateSubnet1
        - Key: aws-cdk:subnet-name
          Value: private
        - Key: aws-cdk:subnet-type
          Value: Private
    Metadata:
      aws:cdk:path: vcis-vpc-stack-non-prod/vcis-vpc/privateSubnet1/Subnet
  vcisvpcprivateSubnet1RouteTableE6E9AC58:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: vcisvpc90CC8047
      Tags:
        - Key: mon:owner
          Value: GAMITCH
        - Key: mon:cost-center
          Value: 5180-9130-SLR74781
        - Key: mon:project
          Value: VC-Industry-System
        - Key: mon:env
          Value: non-prod
        - Key: mon:regulated
          Value: sox
        - Key: mon:data-classification
          Value: internal
        - Key: Name
          Value: vcis-vpc-stack-non-prod/vcis-vpc/privateSubnet1
    Metadata:
      aws:cdk:path: vcis-vpc-stack-non-prod/vcis-vpc/privateSubnet1/RouteTable
  vcisvpcprivateSubnet1RouteTableAssociationC114A61C:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: vcisvpcprivateSubnet1RouteTableE6E9AC58
      SubnetId:
        Ref: vcisvpcprivateSubnet1SubnetB84BEA33
    Metadata:
      aws:cdk:path: vcis-vpc-stack-non-prod/vcis-vpc/privateSubnet1/RouteTableAssociation
  vcisvpcprivateSubnet1DefaultRoute4298AAE0:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: vcisvpcprivateSubnet1RouteTableE6E9AC58
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: vcisvpcpublicSubnet1NATGateway8A36278B
    Metadata:
      aws:cdk:path: vcis-vpc-stack-non-prod/vcis-vpc/privateSubnet1/DefaultRoute
  vcisvpcprivateSubnet2SubnetEA54216C:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 172.18.8.0/22
      VpcId:
        Ref: vcisvpc90CC8047
      AvailabilityZone: us-east-1b
      MapPublicIpOnLaunch: false
      Tags:
        - Key: mon:owner
          Value: GAMITCH
        - Key: mon:cost-center
          Value: 5180-9130-SLR74781
        - Key: mon:project
          Value: VC-Industry-System
        - Key: mon:env
          Value: non-prod
        - Key: mon:regulated
          Value: sox
        - Key: mon:data-classification
          Value: internal
        - Key: Name
          Value: vcis-vpc-stack-non-prod/vcis-vpc/privateSubnet2
        - Key: aws-cdk:subnet-name
          Value: private
        - Key: aws-cdk:subnet-type
          Value: Private
    Metadata:
      aws:cdk:path: vcis-vpc-stack-non-prod/vcis-vpc/privateSubnet2/Subnet
  vcisvpcprivateSubnet2RouteTableCAD930D4:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: vcisvpc90CC8047
      Tags:
        - Key: mon:owner
          Value: GAMITCH
        - Key: mon:cost-center
          Value: 5180-9130-SLR74781
        - Key: mon:project
          Value: VC-Industry-System
        - Key: mon:env
          Value: non-prod
        - Key: mon:regulated
          Value: sox
        - Key: mon:data-classification
          Value: internal
        - Key: Name
          Value: vcis-vpc-stack-non-prod/vcis-vpc/privateSubnet2
    Metadata:
      aws:cdk:path: vcis-vpc-stack-non-prod/vcis-vpc/privateSubnet2/RouteTable
  vcisvpcprivateSubnet2RouteTableAssociation5EDB5A8B:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: vcisvpcprivateSubnet2RouteTableCAD930D4
      SubnetId:
        Ref: vcisvpcprivateSubnet2SubnetEA54216C
    Metadata:
      aws:cdk:path: vcis-vpc-stack-non-prod/vcis-vpc/privateSubnet2/RouteTableAssociation
  vcisvpcprivateSubnet2DefaultRouteAFBA9274:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: vcisvpcprivateSubnet2RouteTableCAD930D4
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: vcisvpcpublicSubnet2NATGateway5929095E
    Metadata:
      aws:cdk:path: vcis-vpc-stack-non-prod/vcis-vpc/privateSubnet2/DefaultRoute
  vcisvpcIGW50F7FA09:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: mon:owner
          Value: GAMITCH
        - Key: mon:cost-center
          Value: 5180-9130-SLR74781
        - Key: mon:project
          Value: VC-Industry-System
        - Key: mon:env
          Value: non-prod
        - Key: mon:regulated
          Value: sox
        - Key: mon:data-classification
          Value: internal
        - Key: Name
          Value: vcis-vpc-stack-non-prod/vcis-vpc
    Metadata:
      aws:cdk:path: vcis-vpc-stack-non-prod/vcis-vpc/IGW
  vcisvpcVPCGWDF92BB0D:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId:
        Ref: vcisvpc90CC8047
      InternetGatewayId:
        Ref: vcisvpcIGW50F7FA09
    Metadata:
      aws:cdk:path: vcis-vpc-stack-non-prod/vcis-vpc/VPCGW
  BastionSGEBD2A3B1:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Bastion Host security group. Other servers in this VPC should only
        accept SSH traffic from this group
      GroupName: bastion-sg
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: "-1"
      SecurityGroupIngress:
        - CidrIp: 52.22.113.235/32
          Description: allow ssh access from central bastion primary instance
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
        - CidrIp: 52.39.76.251/32
          Description: allow ssh access from central bastion secondary instance
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
      Tags:
        - Key: mon:owner
          Value: GAMITCH
        - Key: mon:cost-center
          Value: 5180-9130-SLR74781
        - Key: mon:project
          Value: VC-Industry-System
        - Key: mon:env
          Value: non-prod
        - Key: mon:regulated
          Value: sox
        - Key: mon:data-classification
          Value: internal
        - Key: Name
          Value:
            Fn::Join:
              - ""
              - - Ref: AWS::StackName
                - /bastion-sg
      VpcId:
        Ref: vcisvpc90CC8047
    Metadata:
      aws:cdk:path: vcis-vpc-stack-non-prod/BastionSG/Resource
  PrimaryBastionInstanceAMILookup:
    Type: AWS::CloudFormation::CustomResource
    Properties:
      ServiceToken:
        Fn::Join:
          - ""
          - - "arn:aws:lambda:"
            - Ref: AWS::Region
            - ":"
            - Ref: AWS::AccountId
            - :function:FindCurrentAmi
      AmiNamePrefix: mon-amzn-2
      Region:
        Ref: AWS::Region
    Metadata:
      aws:cdk:path: vcis-vpc-stack-non-prod/PrimaryBastionInstance-AMILookup
  PrimaryBastionInstance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId:
        Fn::GetAtt:
          - PrimaryBastionInstanceAMILookup
          - Id
      InstanceType: t2.nano
      KeyName: vcis-nonprod-keypair
      SecurityGroupIds:
        - Fn::GetAtt:
            - BastionSGEBD2A3B1
            - GroupId
      SubnetId:
        Ref: vcisvpcpublicSubnet1SubnetFB77997E
      Tags:
        - Key: mon:owner
          Value: GAMITCH
        - Key: mon:cost-center
          Value: 5180-9130-SLR74781
        - Key: mon:project
          Value: VC-Industry-System
        - Key: mon:env
          Value: non-prod
        - Key: mon:regulated
          Value: sox
        - Key: mon:data-classification
          Value: internal
        - Key: Name
          Value:
            Fn::Join:
              - ""
              - - Ref: AWS::StackName
                - /PrimaryBastionInstance
      UserData:
        Fn::Base64: "

          \    #!/bin/bash -v

          \    yum update -y --security

          \    yum update -y aws*

          \    echo #!/bin/sh > /etc/cron.daily/yum-security.cron

          \    echo \"yum -y update yum\" >>
          /etc/cron.daily/yum-security.cron

          \    echo \"yum --security -y update\" >>
          /etc/cron.daily/yum-security.cron

          \    chmod +x /etc/cron.daily/yum-security.cron

          \    # EOF

          \    "
    Metadata:
      aws:cdk:path: vcis-vpc-stack-non-prod/PrimaryBastionInstance
  PrimaryBastionInstanceEIP:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      InstanceId:
        Ref: PrimaryBastionInstance
    Metadata:
      aws:cdk:path: vcis-vpc-stack-non-prod/PrimaryBastionInstanceEIP
  SecondaryBastionInstanceAMILookup:
    Type: AWS::CloudFormation::CustomResource
    Properties:
      ServiceToken:
        Fn::Join:
          - ""
          - - "arn:aws:lambda:"
            - Ref: AWS::Region
            - ":"
            - Ref: AWS::AccountId
            - :function:FindCurrentAmi
      AmiNamePrefix: mon-amzn-2
      Region:
        Ref: AWS::Region
    Metadata:
      aws:cdk:path: vcis-vpc-stack-non-prod/SecondaryBastionInstance-AMILookup
  SecondaryBastionInstance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId:
        Fn::GetAtt:
          - SecondaryBastionInstanceAMILookup
          - Id
      InstanceType: t2.nano
      KeyName: vcis-nonprod-keypair
      SecurityGroupIds:
        - Fn::GetAtt:
            - BastionSGEBD2A3B1
            - GroupId
      SubnetId:
        Ref: vcisvpcpublicSubnet2SubnetC5A6D371
      Tags:
        - Key: mon:owner
          Value: GAMITCH
        - Key: mon:cost-center
          Value: 5180-9130-SLR74781
        - Key: mon:project
          Value: VC-Industry-System
        - Key: mon:env
          Value: non-prod
        - Key: mon:regulated
          Value: sox
        - Key: mon:data-classification
          Value: internal
        - Key: Name
          Value:
            Fn::Join:
              - ""
              - - Ref: AWS::StackName
                - /SecondaryBastionInstance
      UserData:
        Fn::Base64: "

          \    #!/bin/bash -v

          \    yum update -y --security

          \    yum update -y aws*

          \    echo #!/bin/sh > /etc/cron.daily/yum-security.cron

          \    echo \"yum -y update yum\" >>
          /etc/cron.daily/yum-security.cron

          \    echo \"yum --security -y update\" >>
          /etc/cron.daily/yum-security.cron

          \    chmod +x /etc/cron.daily/yum-security.cron

          \    shutdown -P now

          \    # EOF

          \    "
    Metadata:
      aws:cdk:path: vcis-vpc-stack-non-prod/SecondaryBastionInstance
  SecondaryBastionInstanceEIP:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      InstanceId:
        Ref: SecondaryBastionInstance
    Metadata:
      aws:cdk:path: vcis-vpc-stack-non-prod/SecondaryBastionInstanceEIP
  VcisSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow ssh access to ec2 instances
      GroupName: vcis-sg
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          IpProtocol: "-1"
      SecurityGroupIngress:
        - Description: allow ssh access from Primary Bastion Server - SG
          FromPort: 22
          IpProtocol: tcp
          SourceSecurityGroupId:
            Fn::GetAtt:
              - BastionSGEBD2A3B1
              - GroupId
          ToPort: 22
      Tags:
        - Key: mon:owner
          Value: GAMITCH
        - Key: mon:cost-center
          Value: 5180-9130-SLR74781
        - Key: mon:project
          Value: VC-Industry-System
        - Key: mon:env
          Value: non-prod
        - Key: mon:regulated
          Value: sox
        - Key: mon:data-classification
          Value: internal
        - Key: Name
          Value:
            Fn::Join:
              - ""
              - - Ref: AWS::StackName
                - /vcis-sg
      VpcId:
        Ref: vcisvpc90CC8047
    Metadata:
      aws:cdk:path: vcis-vpc-stack-non-prod/VcisSG
  VcisRdsSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow access to RDS instances
      GroupName: vcis-rds-sg
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          IpProtocol: "-1"
      SecurityGroupIngress:
        - Description: allow Redis access from Bastion servers
          FromPort: 6379
          IpProtocol: tcp
          SourceSecurityGroupId:
            Fn::GetAtt:
              - BastionSGEBD2A3B1
              - GroupId
          ToPort: 6379
        - Description: allow Aurora access from Bastion servers
          FromPort: 3306
          IpProtocol: tcp
          SourceSecurityGroupId:
            Fn::GetAtt:
              - BastionSGEBD2A3B1
              - GroupId
          ToPort: 3306
        - Description: allow Postgres access from Bastion servers
          FromPort: 5432
          IpProtocol: tcp
          SourceSecurityGroupId:
            Fn::GetAtt:
              - BastionSGEBD2A3B1
              - GroupId
          ToPort: 5432
        - CidrIp: 172.18.4.0/22
          Description: allow Redis access from Private Subnet
          FromPort: 6379
          IpProtocol: tcp
          ToPort: 6379
        - CidrIp: 172.18.4.0/22
          Description: allow Aurora access from Private Subnet
          FromPort: 3306
          IpProtocol: tcp
          ToPort: 3306
        - CidrIp: 172.18.4.0/22
          Description: allow Postgres access from Private Subnet
          FromPort: 5432
          IpProtocol: tcp
          ToPort: 5432
        - CidrIp: 172.18.8.0/22
          Description: allow Redis access from Private Subnet
          FromPort: 6379
          IpProtocol: tcp
          ToPort: 6379
        - CidrIp: 172.18.8.0/22
          Description: allow Aurora access from Private Subnet
          FromPort: 3306
          IpProtocol: tcp
          ToPort: 3306
        - CidrIp: 172.18.8.0/22
          Description: allow Postgres access from Private Subnet
          FromPort: 5432
          IpProtocol: tcp
          ToPort: 5432
      Tags:
        - Key: mon:owner
          Value: GAMITCH
        - Key: mon:cost-center
          Value: 5180-9130-SLR74781
        - Key: mon:project
          Value: VC-Industry-System
        - Key: mon:env
          Value: non-prod
        - Key: mon:regulated
          Value: sox
        - Key: mon:data-classification
          Value: internal
        - Key: Name
          Value:
            Fn::Join:
              - ""
              - - Ref: AWS::StackName
                - /vcis-rds-sg
      VpcId:
        Ref: vcisvpc90CC8047
    Metadata:
      aws:cdk:path: vcis-vpc-stack-non-prod/VcisRdsSG
  vpcIdSsmParam83AB79A0:
    Type: AWS::SSM::Parameter
    Properties:
      Type: String
      Value:
        Ref: vcisvpc90CC8047
      Description: /vcis/non-prod/infra/vpc/output/vpcId
      Name: /vcis/non-prod/infra/vpc/output/vpcId
      Tags:
        mon:owner: GAMITCH
        mon:cost-center: 5180-9130-SLR74781
        mon:project: VC-Industry-System
        mon:env: non-prod
        mon:regulated: sox
        mon:data-classification: internal
    Metadata:
      aws:cdk:path: vcis-vpc-stack-non-prod/vpcIdSsmParam/Resource
  CDKMetadata:
    Type: AWS::CDK::Metadata
    Properties:
      Modules: aws-cdk=0.24.1,@aws-cdk/aws-cloudformation=0.31.0,@aws-cdk/aws-cloudwatch=0.31.0,@aws-cdk/aws-ec2=0.31.0,@aws-cdk/aws-iam=0.31.0,@aws-cdk/aws-ssm=0.31.0,@aws-cdk/cdk=0.31.0,@aws-cdk/cx-api=0.31.0,@aws-cdk/region-info=0.31.0,jsii-runtime=node.js/v10.15.0
Outputs:
  VPCIDOutput:
    Description: VPCID
    Value:
      Ref: vcisvpc90CC8047
    Export:
      Name:
        Fn::Join:
          - ""
          - - Ref: AWS::StackName
            - -VpcId
  VPCCIDROutput:
    Description: The CIDR range for the overall VPC
    Value:
      Fn::GetAtt:
        - vcisvpc90CC8047
        - CidrBlock
    Export:
      Name:
        Fn::Join:
          - ""
          - - Ref: AWS::StackName
            - -VpcCidr
  AvailabilityZone1Output:
    Description: AvailabilityZone1
    Value: us-east-1a
    Export:
      Name:
        Fn::Join:
          - ""
          - - Ref: AWS::StackName
            - -AvailabilityZone1
  AvailabilityZone2Output:
    Description: AvailabilityZone2
    Value: us-east-1b
    Export:
      Name:
        Fn::Join:
          - ""
          - - Ref: AWS::StackName
            - -AvailabilityZone2
  BastionHostKeyNameOutput:
    Description: Key name used for the VPC's bastion hosts
    Value: vcis-nonprod-keypair
    Export:
      Name:
        Fn::Join:
          - ""
          - - Ref: AWS::StackName
            - -BastionHostKeyName
  BastionSGOutput:
    Description: Bastion Host security group.  Other servers in this VPC should only accept
      SSH traffic from this group
    Value:
      Ref: BastionSGEBD2A3B1
    Export:
      Name:
        Fn::Join:
          - ""
          - - Ref: AWS::StackName
            - -BastionSG
  PrimaryBastionIPOutput:
    Description: Primary Bastion Host IP
    Value:
      Ref: PrimaryBastionInstanceEIP
    Export:
      Name:
        Fn::Join:
          - ""
          - - Ref: AWS::StackName
            - -PrimaryBastionIP
  PrimaryBastionDNSOutput:
    Description: Primary Bastion DNS entry
    Value:
      Fn::GetAtt:
        - PrimaryBastionInstance
        - PublicDnsName
    Export:
      Name:
        Fn::Join:
          - ""
          - - Ref: AWS::StackName
            - -PrimaryBastionDNS
  SecondaryBastionIPOutput:
    Description: Secondary Bastion Host IP
    Value:
      Ref: SecondaryBastionInstanceEIP
    Export:
      Name:
        Fn::Join:
          - ""
          - - Ref: AWS::StackName
            - -SecondaryBastionIP
  SecondaryBastionDNSOutput:
    Description: Secondary Bastion Host DNS entry
    Value:
      Fn::GetAtt:
        - SecondaryBastionInstance
        - PublicDnsName
    Export:
      Name:
        Fn::Join:
          - ""
          - - Ref: AWS::StackName
            - -SecondaryBastionDNS
  PublicSubnet1Output:
    Description: PublicSubnet1
    Value:
      Ref: vcisvpcpublicSubnet1SubnetFB77997E
    Export:
      Name:
        Fn::Join:
          - ""
          - - Ref: AWS::StackName
            - -PublicSubnet1
  PublicSubnet2Output:
    Description: PublicSubnet2
    Value:
      Ref: vcisvpcpublicSubnet2SubnetC5A6D371
    Export:
      Name:
        Fn::Join:
          - ""
          - - Ref: AWS::StackName
            - -PublicSubnet2
  PrivateSubnet1Output:
    Description: PrivateSubnet1
    Value:
      Ref: vcisvpcprivateSubnet1SubnetB84BEA33
    Export:
      Name:
        Fn::Join:
          - ""
          - - Ref: AWS::StackName
            - -PrivateSubnet1
  PrivateSubnet2Output:
    Description: PrivateSubnet2
    Value:
      Ref: vcisvpcprivateSubnet2SubnetEA54216C
    Export:
      Name:
        Fn::Join:
          - ""
          - - Ref: AWS::StackName
            - -PrivateSubnet2
  RdsSubnet1Output:
    Description: RdsSubnet1
    Value:
      Ref: vcisvpcrdsSubnet1Subnet2B219688
    Export:
      Name:
        Fn::Join:
          - ""
          - - Ref: AWS::StackName
            - -RdsSubnet1
  RdsSubnet2Output:
    Description: RdsSubnet2
    Value:
      Ref: vcisvpcrdsSubnet2SubnetCE79FD36
    Export:
      Name:
        Fn::Join:
          - ""
          - - Ref: AWS::StackName
            - -RdsSubnet2
